# paho.mqtt.embedded-c

./: BUILD.gn
MQTTClient-C/src/: MQTTClient.c  MQTTClient.h
MQTTClient-C/src/liteOS/: MQTTliteos.c  MQTTliteos.h
